# hedjobs-be

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/v1/: __init__.py  applications.py  auths.py  companies.py  jobs.py  students.py  users.py
app/api/v1/auths/: auths.py
app/config/: constants.py  database.py  email.py  security.py  settings.py
app/core/: database.py
app/models/: __init__.py  application.py  base.py  company.py  job.py  job_certificate.py  job_education.py  job_skill.py  m_career.py  m_certificate.py  m_city.py  m_education.py  m_position.py  m_skill.py  m_stage.py  rate_career_matching.py  rate_certificate_matching.py  rate_city_matching.py  rate_skill_matching.py  recruiter.py  student.py  student_career.py  student_certificate.py  student_education.py  student_skill.py  user.py
app/repositories/: __init__.py  application.py  base.py  company.py  job.py  job_certificate.py  job_education.py  job_skill.py  m_career.py  m_career_repository.py  m_city.py  m_city_repository.py  m_education.py  m_position.py  m_position_repository.py  m_skill.py  m_skill_repository.py  m_stage.py  rate_career_matching.py  rate_certificate_matching.py  rate_city_matching.py  rate_skill_matching.py  recruiter.py  student.py  student_career.py  student_certificate.py  student_education.py  student_skill.py  user.py  user_token.py
app/responses/: __init__.py  auth.py  base.py  company.py  job.py  student.py  user.py
app/routes/: user.py
app/schemas/: __init__.py  auth.py  company.py  job.py  student.py  user.py
app/services/: __init__.py  application.py  auth.py  base.py  company.py  email.py  job.py  student.py  user.py  user_token.py
app/utils/: __init__.py  certificate.csv  city.csv  companies.sql  exception.py  jobs.sql  master_models.sql  matching_rate.py  related_entities.py  search.py  skill_matching.sql  user.py
db/: career.csv  skills.csv  skills.sql
tests/: confest.py  conftest.py  test_db.py
