[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["quan"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.17.6"
psycopg2-binary = "^2.9.3"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
pytest = "^8.2.2"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
