[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
pydantic-settings = "^2.0.3"
uvicorn = { version = "^0.23.2", extras = ["standard"] }
python-dotenv = "^1.0.0"
SQLAlchemy = "^2.0.21"
psycopg2-binary = "^2.9.3"
alembic = "^1.12.0"
httpx = "^0.25.0"
pytest = "^7.4.2"
email-validator = "^2.1.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
fastapi-mail = "^1.4.1"
Jinja2 = "^3.1.2"
PyJWT = "^2.8.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
